# ParallelTasks

./: AliParallelUtils.C  CMakeLists.txt  README.md  Test.C  run.sh
ParalleTasks/: AliParallelTask.cxx  AliParallelTask.h  AliParallelTaskManager.cxx  ParallelTasksLinkDef.h
ParallelTasks/: AliParallelTaskManager.h  CMakeLists.txt  Makefile
cmake/modules/: FindAPPMON.cmake  FindROOT.cmake  FindXROOTD.cmake
